--- a/app/templates/partials/note_content.html
+++ b/app/templates/partials/note_content.html
@@ -1,7 +1,5 @@
 <article class="prose prose-green max-w-none">
     <h1>{{ note.title }}</h1>
     <p class="text-gray-600">{{ note.date }}</p>
-    <div>
-        {{ note.content | safe }}
-    </div>
+    <div>{{ note.content | safe }}</div>
 </article>
